--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <jackson.version>2.13.0</jackson.version>
+        <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
+        <javafaker.version>1.0.2</javafaker.version>
+        <lombok.version>1.18.22</lombok.version>
+        <rest-assured.version>4.4.0</rest-assured.version>
+        <junit-jupiter-params.version>5.8.1</junit-jupiter-params.version>
+        <junit-jupiter-api.version>5.8.2</junit-jupiter-api.version>
     </properties>
 
     <dependencies>
@@ -21,27 +27,24 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
+            <version>${junit-jupiter-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.8.1</version>
-            <scope>test</scope>
+            <version>${junit-jupiter-params.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.4.0</version>
-            <scope>test</scope>
+            <version>${rest-assured.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -64,8 +67,16 @@
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
+            <version>${javafaker.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/java-hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <version>${java-hamcrest.version}</version>
+        </dependency>
+
 
     </dependencies>
 
